add StaffingPlanAdapter to retrive Headcount and Productivity (#1080)
* add StaffingPlanAdapter to retrive Headcount and Productivity

* improve StaffingPlanAdapter testing

* improve ConfigWmsApiClient testing

* fix code quality checks

* fix code quality checks

* fix code quality checks

* add javadoc comment

* add COALESCE to Repositories on process_path and process_name fields

* add COALESCE to Repositories on process_path and process_name fields

* improve unit testing

* fix code quality checks

* add tph and max capacity

* fix code quality checks